# tmc_voice

./: LICENSE.txt
tmc_talk_hoya_py/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
tmc_talk_hoya_py/test/: test_voicetext.py
tmc_talk_hoya_py/tmc_talk_hoya_py/: __init__.py  node.py  pulse.py  voicetext.py
tmc_voice_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tmc_voice_msgs/action/: TalkRequest.action
tmc_voice_msgs/msg/: Voice.msg
